--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -1,13 +1,16 @@
-name: "Issues"
-on: "issues"
+name: Issues
+
+on: issues
+
 jobs:
   event:
-    name: "Output event details"
-    runs-on: "ubuntu-latest"
+    name: Output event details
+    runs-on: ubuntu-latest
     steps:
-      - name: "Checkout Code"
-        uses: "actions/checkout@v2"
-      - name: "Print Event Details"
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Print Event Details
         run: |
           echo "Event Name: ${{ github.event_name }}"
           echo "Action: ${{ github.event.action }}"
