--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm ci
       - name: Run Linter
         run: npm run lint
 
