--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm ci
       - name: Build Project
         run: npm run build
       - name: Deploy
