--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -11,8 +11,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Print Event Details
-        run: |
-          echo "Event Name: ${{ github.event_name }}"
-          echo "Action: ${{ github.event.action }}"
-          echo "Issue Title: ${{ github.event.issue.title }}"
-          echo "Issue Body: ${{ github.event.issue.body }}"
+        run: echo "${{ toJSON(github) }}"
